자잘한 번역 오류 수정

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -20,6 +20,9 @@
     "solo": "SOLO",
     "duo": "DUO",
     "squad": "SQUAD",
+    "솔로": "SOLO",
+    "듀오": "DUO",
+    "스쿼드": "SQUAD",
     "tier": "Tier",
     "total": "Tier",
     "winRate": "WinRate",
@@ -66,6 +69,7 @@
     "레벨":"LV",
     "위":"th",
     "전체":"ALL",
+    "장인":"Character",
     "종합":"ALL",
     "티어":"Tier",
     "우승":"Wins",
@@ -230,6 +234,23 @@
         "Chapel": "Chapel",
         "Factory": "Factory",
         "Dock": "Dock",
+
+        "양궁장": "Archery",
+        "골목길": "Alley",
+        "번화가": "Avenue",
+        "절": "Temple",
+        "학교": "School",
+        "호텔": "Hotel",
+        "연못": "Pond",
+        "연구소": "Research",
+        "모래사장": "Beach",
+        "숲": "Forest",
+        "묘지": "Cemetery",
+        "병원": "Hospital",
+        "고급주택가": "Uptown",
+        "성당": "Chapel",
+        "공장": "Factory",
+        "항구": "Dock",
     
         "badge": {
             "승1":"25Wins!",
