--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -20,6 +20,9 @@
     "solo": "ソロ",
     "duo": "デュオ",
     "squad": "スクワッド",
+    "솔로": "ソロ",
+    "듀오": "デュオ",
+    "스쿼드": "スクワッド",
     "tier": "ティア",
     "total": "ティア",
     "winRate": "胜率",
@@ -66,6 +69,7 @@
     "레벨":"レベル",
     "위":"位",
     "전체":"全体",
+    "장인":"匠人",
     "종합":"綜合",
     "티어":"ティア",
     "우승":"優勝",
@@ -229,6 +233,23 @@
     "Chapel": "教会",
     "Factory": "工場",
     "Dock": "港",
+
+    "양궁장": "洋弓場",
+    "골목길": "路地裏",
+    "번화가": "下町",
+    "절": "寺",
+    "학교": "学校",
+    "호텔": "ホテル",
+    "연못": "池",
+    "연구소": "研究所",
+    "모래사장": "浜辺",
+    "숲": "森",
+    "묘지": "墓場",
+    "병원": "病院",
+    "고급주택가": "高級住宅街",
+    "성당": "教会",
+    "공장": "工場",
+    "항구": "港",
     
     "badge": {
         "승1":"25勝 達成!",
@@ -421,7 +442,7 @@
         "스카디의팔찌": "スカディのブレスレット",
         "오토암즈": "オートアームズ",
         "큐브워치": "キューブウォッチ",
-        "군용나이프": "군용ナイフ",
+        "군용나이프": "軍用ナイフ",
         "장미칼": "バラのナイフ",
         "샴쉬르": "シミターー",
         "일본도": "刀",
