--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -20,6 +20,9 @@
     "solo": "单人",
     "duo": "二人",
     "squad": "三人",
+    "솔로": "单人",
+    "듀오": "二人",
+    "스쿼드": "三人",
     "tier": "层级",
     "total": "层级",
     "winRate": "胜率",
@@ -66,6 +69,7 @@
     "레벨":"等级",
     "위":"位",
     "전체":"全体",
+    "장인":"匠人",
     "종합":"综合",
     "티어":"档次",
     "우승":"优胜",
@@ -229,6 +233,23 @@
     "Chapel": "教堂",
     "Factory": "工厂",
     "Dock": "码头",
+
+    "양궁장": "靶场",
+    "골목길": "小巷",
+    "번화가": "大街",
+    "절": "寺刹",
+    "학교": "学校",
+    "호텔": "旅馆",
+    "연못": "池塘",
+    "연구소": "研究所",
+    "모래사장": "海滩",
+    "숲": "森林",
+    "묘지": "墓园",
+    "병원": "医院",
+    "고급주택가": "高级住宅区",
+    "성당": "教堂",
+    "공장": "工厂",
+    "항구": "码头",
     
     "badge": {
         "승1":"25胜!",
