--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -20,6 +20,9 @@
     "solo": "솔로",
     "duo": "듀오",
     "squad": "스쿼드",
+    "솔로": "솔로",
+    "듀오": "듀오",
+    "스쿼드": "스쿼드",
     "tier": "티어",
     "total": "티어",
     "winRate": "승률",
@@ -59,6 +62,7 @@
     "캐릭터":"캐릭터",
     "매치정보":"매치 정보",
     "전체":"전체",
+    "장인":"장인",
     "랭크":"랭크",
     "일반":"일반",
     "추천아이템":"추천 아이템",
@@ -229,6 +233,23 @@
         "Chapel": "성당",
         "Factory": "공장",
         "Dock": "항구",
+
+        "양궁장": "양궁장",
+        "골목길": "골목길",
+        "번화가": "번화가",
+        "절": "절",
+        "학교": "학교",
+        "호텔": "호텔",
+        "연못": "연못",
+        "연구소": "연구소",
+        "모래사장": "모래사장",
+        "숲": "숲",
+        "묘지": "묘지",
+        "병원": "병원",
+        "고급주택가": "고급주택가",
+        "성당": "성당",
+        "공장": "공장",
+        "항구": "항구",
 
         "badge": {
             "승1":"25승 달성!",
