--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -20,6 +20,9 @@
         "solo": "單人",
         "duo": "二人",
         "squad": "三人",
+        "솔로": "單人",
+        "듀오": "二人",
+        "스쿼드": "三人",
         "tier": "層級",
         "total": "層級",
         "winRate": "勝率",
@@ -66,6 +69,7 @@
         "레벨":"等級",
         "위":"位",
         "전체":"全體",
+        "장인":"匠人",
         "종합":"綜合",
         "티어":"檔次",
         "우승":"優勝",
@@ -229,6 +233,23 @@
     "Chapel": "教堂",
     "Factory": "工廠",
     "Dock": "碼頭",
+
+    "양궁장": "靶場",
+    "골목길": "小巷",
+    "번화가": "大街",
+    "절": "寺剎",
+    "학교": "學校",
+    "호텔": "旅館",
+    "연못": "池塘",
+    "연구소": "研究所",
+    "모래사장": "海灘",
+    "숲": "森林",
+    "묘지": "墓園",
+    "병원": "醫院",
+    "고급주택가": "高級住宅區",
+    "성당": "教堂",
+    "공장": "工廠",
+    "항구": "碼頭",
     
     "badge": {
         "승1":"25勝!",
