--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -76,6 +76,10 @@
     "점수":"LP",
     "킬어시 / 딜량":"KA / DMG",
     "정보없음":"Uknown",
+    "일 전":"days ago",
+    "시간 전":"hours agㅐ",
+    "분 전":"minutes ago",
+    "몇초 전":"a few seconds ago",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
     "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
     "로딩":"Searching match history. Please wait a moment.",
