--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -76,6 +76,10 @@
     "점수":"点数",
     "킬어시 / 딜량":"伤害",
     "정보없음":"信息 无",
+    "일 전":"天前",
+    "시간 전":"小时前",
+    "분 전":"分钟前",
+    "몇초 전":"几秒前",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
     "로딩":"正在搜索战绩。 请稍等。",
