--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -76,6 +76,10 @@
         "점수":"点数",
         "킬어시 / 딜량":"傷害",
         "정보없음":"信息 無",
+        "일 전":"天前",
+        "시간 전":"小時前",
+        "분 전":"分鐘前",
+        "몇초 전":"幾秒前",
         "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
         "question":"卡通層級是以官方統計爲基礎，以卡通人物的勝率、登場率、KA/M、平均排名等爲基礎製作的。",
         "로딩":"正在搜索戰績。 請稍等。",
