--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -76,10 +76,10 @@
     "점수":"点数",
     "킬어시 / 딜량":"ダメージ量",
     "정보없음":"情報 無",
-    "일 전":"일 전",
-    "시간 전":"시간 전",
-    "분 전":"분 전",
-    "몇초 전":"몇초 전",
+    "일 전":"日前",
+    "시간 전":"時間前",
+    "분 전":"分前",
+    "몇초 전":"数秒前",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
     "로딩":"戦績を検索中です。 少々お待ちください",
