--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -466,7 +466,7 @@
         "FN57": "FN57",
         "더블리볼버SP": "ダブルリボルバーSP",
         "매그넘-아나콘다": "マグナム-アナコンダ",
-        "STG-44": "STG-44",
+        "STG44": "STG-44",
         "AK-47": "AK-47",
         "M16A1": "M16A1",
         "스프링필드": "スプリングフィールド",
@@ -510,7 +510,7 @@
         "장궁": "長弓",
         "컴포지트보우": "コンポジットボウ",
         "강궁": "強弓",
-        "곡궁": "国弓",
+        "국궁": "国弓",
         "벽력궁": "霹靂弓",
         "탄궁": "弾弓",
         "화전": "火矢",
@@ -533,7 +533,7 @@
         "류큐톤파": "琉球トンファー",
         "골든브릿지": "ゴールデンブリッジ",
         "싱글픽업": "シングルピックアップ",
-        "루비스폐셜": "ルビースペシャル",
+        "루비스페셜": "ルビースペシャル",
         "험버커픽업": "ハンバーカピックアップ",
         "King-V": "King-V",
         "노캐스터": "ノーキャスター",
