--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -466,7 +466,7 @@
         "FN57": "FN57",
         "더블리볼버SP": "더블리볼버SP",
         "매그넘-아나콘다": "매그넘-아나콘다",
-        "STG-44": "STG-44",
+        "STG44": "STG-44",
         "AK-47": "AK-47",
         "M16A1": "M16A1",
         "스프링필드": "스프링필드",
@@ -510,7 +510,7 @@
         "장궁": "장궁",
         "컴포지트보우": "컴포지트보우",
         "강궁": "강궁",
-        "곡궁": "곡궁",
+        "국궁": "국궁",
         "벽력궁": "벽력궁",
         "탄궁": "탄궁",
         "화전": "화전",
@@ -533,7 +533,7 @@
         "류큐톤파": "류큐톤파",
         "골든브릿지": "골든브릿지",
         "싱글픽업": "싱글픽업",
-        "루비스폐셜": "루비스페셜",
+        "루비스페셜": "루비스페셜",
         "험버커픽업": "험버커픽업",
         "King-V": "King-V",
         "노캐스터": "노캐스터",
