--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -77,7 +77,7 @@
     "킬어시 / 딜량":"KA / DMG",
     "정보없음":"Uknown",
     "일 전":"days ago",
-    "시간 전":"hours agㅐ",
+    "시간 전":"hours ago",
     "분 전":"minutes ago",
     "몇초 전":"a few seconds ago",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
