--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -189,7 +189,8 @@
         "아드리아나": "아드리아나",
         "쇼이치": "쇼이치",
         "실비아": "실비아",
-        "엠마": "엠마"
+        "엠마": "엠마",
+        "레녹스": "Lenox"
     },
     "weapons": {
         "투척": "투척", 
@@ -210,7 +211,8 @@
         "쌍절곤": "쌍절곤", 
         "배트": "배트", 
         "망치": "망치", 
-        "석궁": "석궁"        
+        "석궁": "석궁",     
+        "채찍": "채찍"         
     },
     "armor": {
         "무기":"무기",
@@ -594,7 +596,16 @@
         "화살통": "화살통",
         "생명의가루": "생명의가루",
         "비파단도": "비파단도",
-        "월왕구천": "월왕구천"
+        "월왕구천": "월왕구천",
+        "채찍": "채찍",
+        "오랏줄": "오랏줄",
+        "철편": "철편",
+        "바람채찍": "바람채찍",
+        "뇌룡편": "뇌룡편",
+        "벽력편": "벽력편",
+        "글레이프니르": "글레이프니르",
+        "플라즈마윕": "플라즈마윕",
+        "혈화구절편": "혈화구절편"
     },
     "skill": {
         "아야": {
@@ -1015,6 +1026,28 @@
                 "Detail": "엠마가 비둘기, 모자, 토끼를 대상으로 순간이동하여 추가 효과를 줍니다.\n 비둘기 : 비둘기가 엠마의 기존 위치로 이동하여 경로상의 적에게 150/200/250(+0.45 공격력)의 피해를 주고 1.5초간 속박합니다.\n 모자 : 모자가 엠마와 자리를 바꾸며 범위 안의 적에게 200/250/300(+0.75 공격력)의 피해를 입히고 모자의 중심으로 끌어당깁니다.\n 토끼 : 토끼 주변의 적들을 1초간 토끼로 바꿉니다."
             }
         },
+        "레녹스": {
+            "T": {
+                "name": "T",
+                "Detail": "?"
+            },
+            "Q": {
+                "name": "Q",
+                "Detail": "?"
+            },
+            "W": {
+                "name": "W",
+                "Detail": "?"
+            },
+            "E": {
+                "name": "E",
+                "Detail": "?"
+            },
+            "R": {
+                "name": "R",
+                "Detail": "?"
+            }
+        },
 
         
         "단검": {
@@ -1092,7 +1125,12 @@
         "쌍절곤": {
             "name": "맹룡과강",
             "Detail": "스킬을 사용하면 지정한 방향을 바라보고 정신 집중을 시작하며, 스킬을 한번 더 사용하거나\n유지 시간이 끝나면 투사체를 발사합니다.\n1초 이상 정신을 집중하여 발사된 투사체에 적중하면 1.25초간 기절합니다."
+        },
+        "채찍": {
+            "name": "?",
+            "Detail": "S"
         }
+
     }
 
 
