--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -448,153 +448,153 @@
         "스카디의팔찌": "斯嘉蒂的手鐲",
         "오토암즈": "自動臂",
         "큐브워치": "召晚手錶",
-        "군용나이프": "Army Knife",
-        "장미칼": "Rose Knife",
-        "샴쉬르": "Shamshir",
-        "일본도": "Katana",
-        "마사무네": "Masamune",
-        "무라마사": "Muramasa",
-        "바스타드소드": "Bastard Sword",
-        "보검": "Jewel Sword",
-        "사슬낫": "Chain Scythe",
-        "전투도끼": "Battle Axe",
-        "경량화도끼": "Light Hatchet",
-        "사신의낫": "Reaper's Scythe",
-        "대부": "Gigantic Axe",
-        "쌍칼": "Twin Swords",
-        "피렌체식 쌍검":"Florentine",
-        "매그넘-파이선": "Magnum-Python",
-        "베레타M92F": "Beretta M92F",
+        "군용나이프": "軍刀",
+        "장미칼": "玫瑰刀",
+        "샴쉬르": "彎刀",
+        "일본도": "武士刀",
+        "마사무네": "名刀正宗",
+        "무라마사": "妖刀村正",
+        "바스타드소드": "長劒",
+        "보검": "寶石劒",
+        "사슬낫": "鎖鐮",
+        "전투도끼": "戰斧",
+        "경량화도끼": "輕量化斧頭",
+        "사신의낫": "神鐮刀",
+        "대부": "大斧",
+        "쌍칼": "雙刀",
+        "피렌체식 쌍검":"佛羅倫窿",
+        "매그넘-파이선": "馬格努恩-蠎蛇",
+        "베레타M92F": "伯萊塔M92F",
         "FN57": "FN57",
-        "더블리볼버SP": "Double Revolver SP",
-        "매그넘-아나콘다": "Magnum-Anaconda",
+        "더블리볼버SP": "雙動式左輪手槍SP",
+        "매그넘-아나콘다": "馬格努恩-巨蟒",
         "STG44": "STG-44",
         "AK-47": "AK-47",
         "M16A1": "M16A1",
-        "스프링필드": "Springfield",
-        "하푼건": "Harpoon Gun",
-        "금교전": "Golden Rifle",
-        "레일건": "Railgun",
-        "레이피어": "Rapier",
-        "매화검": "Apricot Sword",
-        "죽창": "Bamboo Spear",
-        "바이던트": "Bident",
-        "파이크": "Pike",
-        "도끼창": "Halberd Axe",
-        "강창": "Sharpened Spear",
-        "워해머": "Warhammer",
-        "모닝스타": "Morning Star",
-        "사슴망치": "Black Stag Hammer",
-        "장봉": "Long Rod",
-        "도깨비방망이": "Goblin Bat",
-        "우산": "Umbrella",
-        "횃불": "Torch",
-        "수류탄": "Grenade",
-        "화염병": "Molotov Cocktail",
-        "싸인볼": "Signed Ball",
-        "슬링": "Sling",
-        "밀가루폭탄": "Flour Bomb",
-        "볼라이트닝": "Ball Lightning",
-        "플러버": "Flubber",
-        "가시탱탱볼": "Spiky Bouncy Ball",
-        "다트": "Dart",
-        "빈티지카드": "Vintage Cards",
-        "표창": "Throwing Stars",
-        "흑건": "Onyx Dagger",
-        "부적": "Charm",
-        "유엽비도": "Willow Leaf Spike",
-        "챠크람": "Chakram",
-        "매화비표": "Apricot Flower Tag",
-        "독침": "Venom Dart",
-        "법륜": "Dharma Chakram",
-        "플럼바타": "Plumbata",
-        "목궁": "Wooden Bow",
-        "장궁": "Longbow",
-        "컴포지트보우": "Composite Bow",
-        "강궁": "Strong Bow",
-        "국궁": "Stallion Bow",
-        "벽력궁": "Mighty Bow",
-        "탄궁": "Pellet Bow",
-        "화전": "Scorchbow",
-        "쇠뇌": "Long Crossbow",
-        "크로스보우": "Crossbow",
-        "노": "Power Crossbow",
-        "저격궁": "Laser Crossbow",
-        "헤비크로스보우": "Heavy Crossbow",
-        "철궁": "Steel Bow",
-        "글러브": "Leather Glove",
-        "아이언너클": "Iron Knuckles",
-        "건틀릿": "Gauntlet",
-        "윙너클": "Wing Knuckles",
-        "귀골장갑": "Bone Gauntlet",
-        "벽력귀투": "Shatter Shell Gauntlet",
-        "유리너클": "Glass Knuckles",
-        "회단장갑": "Phoenix Gloves",
-        "톤파": "Tonfa",
-        "경찰봉": "Police Baton",
-        "류큐톤파": "Ryukyu Tonfa",
-        "골든브릿지": "Golden Bridge",
-        "싱글픽업": "Single Coil Pickup",
-        "루비스페셜": "Ruby Special",
-        "험버커픽업": "Humbucker Pickup",
+        "스프링필드": "斯普林菲爾德",
+        "하푼건": "魚叉炮",
+        "금교전": "黃金步槍",
+        "레일건": "電磁炮",
+        "레이피어": "刺劍",
+        "매화검": "梅花劍",
+        "죽창": "竹矛",
+        "바이던트": "雙叉戟",
+        "파이크": "矛",
+        "도끼창": "戰斧",
+        "강창": "鋼槍",
+        "워해머": "戰錘",
+        "모닝스타": "釘頭錘",
+        "사슴망치": "黑鹿錘",
+        "장봉": "長棍",
+        "도깨비방망이": "碎棒",
+        "우산": "雨傘",
+        "횃불": "火炬",
+        "수류탄": "手榴彈",
+        "화염병": "雞尾酒",
+        "싸인볼": "簽名球",
+        "슬링": "吊索",
+        "밀가루폭탄": "麪粉炸彈",
+        "볼라이트닝": "閃電球",
+        "플러버": "飛天法寳",
+        "가시탱탱볼": "尖刺彈力球",
+        "다트": "飛鏢",
+        "빈티지카드": "復古擈克",
+        "표창": "梅花鏢",
+        "흑건": "瑪瑙匕首",
+        "부적": "符咒",
+        "유엽비도": "柳葉飛刀",
+        "챠크람": "環刃",
+        "매화비표": "梅花無",
+        "독침": "毒針",
+        "법륜": "達摩法輪",
+        "플럼바타": "普拉巴塔標槍",
+        "목궁": "木弓",
+        "장궁": "長弓",
+        "컴포지트보우": "複合弓",
+        "강궁": "強弓",
+        "국궁": "松武弓",
+        "벽력궁": "暗殺特弓",
+        "탄궁": "狙撀彈弓",
+        "화전": "火矢弓",
+        "쇠뇌": "長弩",
+        "크로스보우": "十字弩",
+        "노": "连弩",
+        "저격궁": "狙擊弩",
+        "헤비크로스보우": "重弩",
+        "철궁": "鋼弩",
+        "글러브": "皮手套",
+        "아이언너클": "鐵指虎",
+        "건틀릿": "拳套",
+        "윙너클": "羽翼指虎",
+        "귀골장갑": "龜骨拳套",
+        "벽력귀투": "爆裂拳套",
+        "유리너클": "碎玻璃指虎",
+        "회단장갑": "涅盤拳套",
+        "톤파": "雙拐",
+        "경찰봉": "警棍",
+        "류큐톤파": "琉球雙拐",
+        "골든브릿지": "黃金琴橋",
+        "싱글픽업": "單線圈拾音器電吉他",
+        "루비스페셜": "紅寶石特别版",
+        "험버커픽업": "雙線圈拾音器電吉他",
         "King-V": "King-V",
-        "노캐스터": "Nocaster",
-        "슈퍼스트랫": "Superstrat",
-        "야생마": "Wild Horse",
-        "눈차크": "Nunchaku",
-        "샤퍼": "Sharper",
-        "블리더": "Bleeder",
-        "가면": "Mask",
-        "머리테": "Circlet",
-        "베레모": "Beret",
-        "사슬코이프": "Chain Coif",
-        "안전모": "Safety Helmet",
-        "방탄모": "Ballistic Helmet",
-        "소방헬멧": "Fire Helmet",
-        "티아라": "Tiara",
-        "왕관": "Crown",
-        "투구": "Close Helm",
-        "가죽갑옷": "Leather Armor",
-        "가죽자켓": "Leather Jacket",
-        "거북도복": "Turtle Dobok",
-        "군복": "Military Suit",
-        "덧댄로브": "Patched Robe",
-        "드레스": "Dress",
-        "비키니": "Bikini",
-        "잠수복": "Diving Suit",
-        "라이더자켓": "Rider Jacket",
-        "사슬갑옷": "Chain Armor",
-        "정장": "Suit",
-        "치파오": "Qipao",
-        "판금갑옷": "Sheet Metal Armor",
-        "한복": "Hanbok",
-        "방탄조끼": "Bulletproof Vest",
-        "가죽방패": "Leather Shield",
-        "분대장완장": "Squad Leader Armband",
-        "브레이서": "Bracer",
-        "검집": "Sheath",
-        "금팔찌": "Golden Bracelet",
-        "바주반드": "Bazuband",
-        "진홍팔찌": "Crimson Bracelet",
-        "강철방패": "Steel Shield",
-        "무릎보호대": "Knee Pads",
-        "체인레깅스": "Chain Leggings",
-        "하이힐": "High Heels",
-        "힐리스": "Heelys",
-        "덧댄슬리퍼": "Repaired Slippers",
-        "부츠": "Boots",
-        "강철무릎보호대": "Steel Knee Pads",
-        "전투화": "Combat Boots",
-        "킬힐": "Killer Heels",
-        "군선": "Gilded Quill Fan",
-        "성자의유산": "Saint's Relic",
-        "운명의꽃": "Flower of Fate",
-        "유리조각": "Glass Pieces",
-        "인형": "Doll",
-        "저격스코프": "Sniping Scope",
-        "진신사리": "Buddha Sarira",
-        "화살통": "Quiver",
-        "생명의가루": "Powder of Life",
+        "노캐스터": "諾卡斯特",
+        "슈퍼스트랫": "金屬復古吉他",
+        "야생마": "野馬",
+        "눈차크": "雙節棍",
+        "샤퍼": "睹棍",
+        "블리더": "飼養員",
+        "가면": "面具",
+        "머리테": "頭環",
+        "베레모": "貝雷帽",
+        "사슬코이프": "鏈甲兜帽",
+        "안전모": "安全帽",
+        "방탄모": "防彈頭盔",
+        "소방헬멧": "消防頭盔",
+        "티아라": "金屬頭環",
+        "왕관": "王冠",
+        "투구": "護面盔",
+        "가죽갑옷": "皮衣",
+        "가죽자켓": "皮夾克",
+        "거북도복": "龜仙道服",
+        "군복": "迷彩軍服",
+        "덧댄로브": "補釘長袍",
+        "드레스": "連身裙",
+        "비키니": "比基尼",
+        "잠수복": "潛水装",
+        "라이더자켓": "騎士夾克",
+        "사슬갑옷": "鎖子甲",
+        "정장": "西裝",
+        "치파오": "旗袍",
+        "판금갑옷": "銷金鎧甲",
+        "한복": "韓服",
+        "방탄조끼": "防彈背心",
+        "가죽방패": "皮盾",
+        "분대장완장": "長臂章",
+        "브레이서": "護腕",
+        "검집": "劍鞘",
+        "금팔찌": "金手鐲",
+        "바주반드": "鐵護手",
+        "진홍팔찌": "紅實石手鋉",
+        "강철방패": "鋼錂之盾",
+        "무릎보호대": "護膝",
+        "체인레깅스": "護腿鏈甲",
+        "하이힐": "高跟鞋",
+        "힐리스": "滑輪鞋",
+        "덧댄슬리퍼": "補丁拖鞋",
+        "부츠": "靴子",
+        "강철무릎보호대": "鋼鐵護膝",
+        "전투화": "軍靴",
+        "킬힐": "恨天高",
+        "군선": "鍍金羽扇",
+        "성자의유산": "聖者的遺物",
+        "운명의꽃": "命運之花",
+        "유리조각": "玻璃碎片",
+        "인형": "娃娃",
+        "저격스코프": "狙擊鏡",
+        "진신사리": "舍利子",
+        "화살통": "箭袋",
+        "생명의가루": "生命之粉",
         "비파단도": "琵琶短剣",
         "월왕구천": "越王勾踐",
         "채찍": "鞭子",
