최신 데이터 업데이트, 레녹스 스킬 번역

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -1028,24 +1028,24 @@
         },
         "레녹스": {
             "T": {
-                "name": "T",
-                "Detail": "?"
+                "name": "위풍당당",
+                "Detail": "레녹스는 낚시로 물고기를 획득할 때 마다 무기를 제외한 아이템을 추가로 획득하며,\n  일정 시간마다 기본 공격으로 적 플레이어를 공격 할 때 최대 체력의 일정 비율 만큼 피해를 흡수하는 보호막을 획득합니다."
             },
             "Q": {
-                "name": "Q",
-                "Detail": "?"
+                "name": "회오리 비늘",
+                "Detail": "레녹스가 원형 범위의 적들에게 피해를 입힙니다.\n  가장자리에는 레녹스 최대체력에 일정 비율 만큼 추가로 피해를 줍니다.\n  적에게 공격을 적중시키면 스택을 얻고, 스택당 회오리 비늘의 쿨타임을 감소시킵니다."
             },
             "W": {
-                "name": "W",
-                "Detail": "?"
+                "name": "날카로운 독니",
+                "Detail": "레녹스는 채찍으로 두 번 공격하며, 첫 번째 휘두르기로 주변의 적들에게 피해를 입히고 일정시간 이동속도를 느려지게 합니다.\n  두 번째 찌르기는 경로상의 적들에게 피해를 주고 일정 시간 동안 침묵시킵니다.\n  두 번째 찌르기에 적이 적중되면 레녹스의 이동속도가 일정 시간 증가합니다."
             },
             "E": {
-                "name": "E",
-                "Detail": "?"
+                "name": "휩쓸기",
+                "Detail": "레녹스가 뒤에서 앞으로 채찍을 휘두르며 범위 안의 적들에게 피해를 입히고 밀어낸 후, 이동속도를 일정 시간 느려지게 합니다."
             },
             "R": {
-                "name": "R",
-                "Detail": "?"
+                "name": "푸른뱀",
+                "Detail": "레녹스가 채찍을 X자 형태로 빠르게 두 번 휘둘러 각각 피해를 입히고 일정 시간 동안 푸른뱀 효과를 줍니다.\n 푸른뱀:일정시간 동안 고정 피해를 이동 거리에 비례하여 입힙니다. \n두 번 모두 적중한 대상에게 더 큰 고정피해를 이동 거리에 비례하여 입힙니다."
             }
         },
 
@@ -1127,8 +1127,8 @@
             "Detail": "스킬을 사용하면 지정한 방향을 바라보고 정신 집중을 시작하며, 스킬을 한번 더 사용하거나\n유지 시간이 끝나면 투사체를 발사합니다.\n1초 이상 정신을 집중하여 발사된 투사체에 적중하면 1.25초간 기절합니다."
         },
         "채찍": {
-            "name": "?",
-            "Detail": "S"
+            "name": "갈고리",
+            "Detail": "채찍을 앞으로 날려 맞은 적에게 피해를 주고 앞으로 끌고 옵니다."
         }
 
     }
