레녹스 번역 오류 수정

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -190,7 +190,7 @@
         "쇼이치": "쇼이치",
         "실비아": "실비아",
         "엠마": "엠마",
-        "레녹스": "Lenox"
+        "레녹스": "레녹스"
     },
     "weapons": {
         "투척": "투척", 
