--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -84,6 +84,9 @@
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
     "로딩":"戦績を検索中です。 少々お待ちください",
     "없음":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
+    "nodata":"データなし。",
+    "공지사항1":"ポルトガル語が追加されました。",
+    "공지사항2":"",
     "더헌터":{
         "name": "ザ·ハンター",
         "Detail": "野生動物50匹以上狩り！ ホッキョクグマは殺さないでください。"
