--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -84,6 +84,9 @@
     "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
     "로딩":"正在搜索战绩。 请稍等。",
     "없음":"无户籍信息全无户籍信息。 请重新确认昵称后搜索。",
+    "nodata":"没有数据。",
+    "공지사항1":"增加了葡萄牙语",
+    "공지사항2":"",
     "더헌터":{
         "name": "猎人",
         "Detail": "猎取野生动物50只以上！ 救救北极熊吧..."
