포르투갈 번역 오류 수정

--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -46,7 +46,7 @@
     "탑3":"Top3",
     "게임":"Jogadas",
     "게임수":"Jogadas",
-    "승":"Vitória",
+    "승":"Win",
     "상위":"Melhores",
     "딜량":"Dano",
     "킬어시":"Kill/As",
@@ -61,7 +61,7 @@
     "최다킬":"Mais Kills",
     "캐릭터":"Personagem",
     "매치정보":"informação do Jogo",
-    "랭크":"Ranqueada",
+    "랭크":"Rank",
     "일반":"Normal",
     "추천아이템":"Itens Recomendado",
     "빌드":"Build",
