광고 오류 수정

--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -145,7 +145,7 @@
         "attackPower": "Poder de Ataque",
         "increaseSkillDamage": "Amplificação de habilidade",
         "increaseSkillDamageRatio": "Amplificação de habilidade",
-        "attackSpeedRatio": "Velocidade de ataque",
+        "attackSpeedRatio": "Velocidade Atq..",
         "lifeSteal": "Rubo de Vida",
 
         "criticalStrikeChance": "Chance de Acerto Críticos",
