레녹스 번역 변경

--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -194,7 +194,7 @@
         "쇼이치": "彰一",
         "실비아": "西爾維婭",
         "엠마": "艾瑪",
-        "레녹스": "Lenox"
+        "레녹스": "伦诺克斯"
     },
     "weapons": {
         "투척": "投擲", 
