--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -194,7 +194,7 @@
         "쇼이치": "彰一",
         "실비아": "西尔维娅",
         "엠마": "艾玛",
-        "레녹스": "Lenox"
+        "레녹스": "伦诺克斯"
     },
     "weapons": {
         "투척": "投掷", 
