배치중 번역 추가

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -85,6 +85,7 @@
     "로딩":"Searching match history. Please wait a moment.",
     "없음":"No match historical information. Please check your nickname again and search for it.",
     "nodata":"No data.",
+    "배치중":"PLACEMENT",
     "공지사항1":"Português foi adicionado.",
     "공지사항2":"",
     "TheHunter":{
