--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -85,6 +85,7 @@
     "로딩":"戦績を検索中です。 少々お待ちください",
     "없음":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
     "nodata":"データなし。",
+    "배치중":"配置中",
     "공지사항1":"ポルトガル語が追加されました。",
     "공지사항2":"",
     "더헌터":{
