--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -85,6 +85,7 @@
     "로딩":"Pesquisando no histórico de partidas. Por favor espere um momento.",
     "없음":"Nenhuma informação histórica de correspondência. Verifique o seu apelido novamente e pesquise-o.",
     "nodata":"Sem Dados",
+    "배치중":"PLACEMENT",
     "공지사항1":"Português foi adicionado.",
     "공지사항2":"",
     "TheHunter":{
