--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -85,6 +85,7 @@
     "로딩":"正在搜索战绩。 请稍等。",
     "없음":"无户籍信息全无户籍信息。 请重新确认昵称后搜索。",
     "nodata":"没有数据。",
+    "배치중":"布置中",
     "공지사항1":"增加了葡萄牙语",
     "공지사항2":"",
     "더헌터":{
