--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -87,6 +87,7 @@
         "로딩":"正在搜索戰績。 請稍等。",
         "없음":"無戶籍信息全無戶籍信息。 請重新確認暱稱後搜索。",
         "nodata":"沒有數據。",
+        "배치중":"佈置中",
         "더헌터":{
         "name": "獵人",
         "Detail": "獵取野生動物50只以上！ 救救北極熊吧..."
