--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -82,6 +82,7 @@
     "로딩":"전적을 검색 중 입니다. 잠시만 기다려 주세요.",
     "없음":"전적정보가 없습니다. 닉네임을 다시 확인하여 검색해 주세요.",
     "nodata":"데이터가 없습니다.",
+    "배치중":"배치 중",
     "공지사항1":"Português foi adicionado.",
     "공지사항2":"",
     "더헌터":{
