안내문구 번역 추가

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -84,6 +84,9 @@
     "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
     "로딩":"Searching match history. Please wait a moment.",
     "없음":"No match historical information. Please check your nickname again and search for it.",
+    "표본안내":"Uses data based on ranked games from Silver and higher.",
+    "장인안내":"Based on the number of games in Gold and higher.",
+    "신캐안내":"The character cannot participate in the rank game, so it has been replaced by normal game-based statistics.",
     "nodata":"No data.",
     "배치중":"PLACEMENT",
     "공지사항1":"Português foi adicionado.",
