--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -84,6 +84,9 @@
     "question":"Character tier is made based on the winning rate, pick rate, KA/M, and average ranking of characters based on official statistics.",
     "로딩":"Pesquisando no histórico de partidas. Por favor espere um momento.",
     "없음":"Nenhuma informação histórica de correspondência. Verifique o seu apelido novamente e pesquise-o.",
+    "표본안내":"Usa os dados com base na Irlanda de jogos de Silver e mais alto.",
+    "장인안내":"Baseado no número de jogos em Gold e mais alto.",
+    "신캐안내":"O personagem não pode participar no jogo, por isso foi substituído por estatísticas gerais game-based.",
     "nodata":"Sem Dados",
     "배치중":"PLACEMENT",
     "공지사항1":"Português foi adicionado.",
