--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -44,8 +44,8 @@
         "filter1":"物品選擇",
         "filter2":"地區選擇",
         "탑3":"前3名",
-        "게임":"棋局",
-        "게임수":"棋局",
+        "게임":"遊戲",
+        "게임수":"遊戲",
         "승":"勝",
         "상위":"上位",
         "딜량":"傷害",
@@ -86,6 +86,9 @@
         "공지사항2":"",
         "로딩":"正在搜索戰績。 請稍等。",
         "없음":"無戶籍信息全無戶籍信息。 請重新確認暱稱後搜索。",
+        "표본안내":"性格統計只收集銀等級以上的排名遊戲。",
+        "장인안내":"基準 - 黃金等級以上 + 遊戲版數",
+        "신캐안내":"該性格不能參加排位遊戲 ，所以被一般遊戲統計代替了。",
         "nodata":"沒有數據。",
         "배치중":"佈置中",
         "더헌터":{
