--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -62,7 +62,7 @@
     "캐릭터":"性格",
     "매치정보":"マッチ情報",
     "랭크":"ランク",
-    "일반":"ノマル",
+    "일반":"一般",
     "추천아이템":"推薦 物品",
     "빌드":"ツリー",
     "더 보기":"もっと見る",
@@ -84,6 +84,9 @@
     "question":"キャラクターティアは、公式統計を基にしたキャラク ターの勝率、ピック率、KA/M、平均順位などを基に作られます",
     "로딩":"戦績を検索中です。 少々お待ちください",
     "없음":"戦績情報がありません。 ニックネームをもう一度確認して検索してください。",
+    "표본안내":"性格統計はシルバーティア以上のランクゲームのみ収集します。",
+    "장인안내":"基準 - ゴールドランク以上 + ゲーム版数",
+    "신캐안내":"該当性格ーはランクゲームに参加できないため、一般ゲーム基準の統計に代替されました。",
     "nodata":"データなし。",
     "배치중":"配置中",
     "공지사항1":"ポルトガル語が追加されました。",
