--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -81,6 +81,9 @@
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, KA/M, 평균순위 등을 바탕으로 만들어집니다.",
     "로딩":"전적을 검색 중 입니다. 잠시만 기다려 주세요.",
     "없음":"전적정보가 없습니다. 닉네임을 다시 확인하여 검색해 주세요.",
+    "표본안내":"캐릭터 통계는 실버 티어 이상의 랭크 게임만을 수집합니다.",
+    "장인안내":"기준 - 골드 랭크 이상 + 게임판 수",
+    "신캐안내":"해당 캐릭터는 랭크게임에 참여할 수 없어 일반 게임 기준 통계로 대체 되었습니다.",
     "nodata":"데이터가 없습니다.",
     "배치중":"배치 중",
     "공지사항1":"Português foi adicionado.",
