--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -44,8 +44,8 @@
     "filter1":"物品选择",
     "filter2":"地区选择",
     "탑3":"前3名",
-    "게임":"棋局",
-    "게임수":"棋局",
+    "게임":"游戏",
+    "게임수":"游戏",
     "승":"胜",
     "상위":"上位",
     "딜량":"伤害",
@@ -84,6 +84,9 @@
     "question":"卡通层级是以官方统计为基础，以卡通人物的胜率、登场率、KA/M、平均排名等为基础制作的。",
     "로딩":"正在搜索战绩。 请稍等。",
     "없음":"无户籍信息全无户籍信息。 请重新确认昵称后搜索。",
+    "표본안내":"性格统计只收集银等级以上的排名游戏。",
+    "장인안내":"基准 - 黄金等级以上 + 游戏版数",
+    "신캐안내":"该性格不能参加排位游戏 ，所以被一般游戏统计代替了。",
     "nodata":"没有数据。",
     "배치중":"布置中",
     "공지사항1":"增加了葡萄牙语",
