--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -2,7 +2,7 @@
     "Title": {
         "Main": "블랙 서바이벌 - 캐릭터 티어 / 캐릭터 정보",
         "Map":"블랙 서바이벌 - 지도 도감 / 루트 제작",
-        "newMain": "블랙 서바이벌 - 전적검색",
+        "newMain": "블서 / 블랙 서바이벌 - 전적검색",
         "Detail1":"블랙 서바이벌 -",
         "Detail2":"공략, 스킬트리, 아이템트리 - 캐릭터 분석",
         "Match": "게임 전적 정보",
