--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -198,7 +198,8 @@
         "쇼이치": "彰一",
         "실비아": "シルヴィア",
         "엠마": "エマ",
-        "레녹스": "リノックス"
+        "레녹스": "リノックス",
+        "로지": "ロッジ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -1050,6 +1051,28 @@
             "R": {
                 "name": "青い蛇",
                 "Detail": "レノックスが鞭をX字型に素早く2回振って、それぞれのダメージを与え、青い蛇の効果を与えます青い蛇 :固定ダメージを移動距離に応じて与えます。\n2回とも命中した場合は移動距離によって追加の固定ダ メージを与えます。\n"
+            }
+        },
+        "로지": {
+            "T": {
+                "name": "ダブルショット",
+                "Detail": "ロッジはスキル使用後、一定時間内に基本攻撃をすると二回連続で攻撃しダメージを与えます。\n ロッジはチョコレートが入った食べ物を食べると体力回復量に応じてスタミナを回復し、チョコレートが入った飲み物を飲むとスタミナ回復量に応じて体力を回復します。"
+            },
+            "Q": {
+                "name": "イージーショット",
+                "Detail": "ロッジが指定した方向へ銃を発射して経路上の敵にダメージを与えます。\n 銃に当たった対象がいると一定時間内の次の移動命令によって早い速度で突進し、イージーショットのクールダウンが減少します。"
+            },
+            "W": {
+                "name": "スピンショット",
+                "Detail": "ロッジが銃を乱射して周りの敵にダメージを与え、一定時間の間防御力を減少させ体力再生効果と飲食の回復効果を中止させます。\nロッジは乱射をする間は移動速度が増加し、弾丸をリロードします。"
+            },
+            "E": {
+                "name": "エアショット",
+                "Detail": "ロッジが指定した対象をジャンプして飛び越えながら、対象がいた位置に銃を発射しダメージを与えます。\nロッジはジャンプ途中はダメージを受けず、目標として指定できなくなります。\nダメージを与えた対象がいるなら指定した対象へスキルをもう一度使用してダメージを与えながら突き飛ばします。\n突き飛ばされた対象が壁にぶつかると気絶します。"
+            },
+            "R": {
+                "name": "セムテックス爆弾 Mk-II",
+                "Detail": "ロッジが敵や地面に付着される爆弾を発射します。\n爆弾は一定時間後に爆発します。爆弾を敵に付着して場合は移動速度が減少し、爆発時ダメージを与えます。\n爆弾が爆発する前に対象に基本攻撃を５回命中させると即時爆発され、対象の最大体力に応じた追加ダメージを与えます。スキルを命中させると2回攻撃したことになります。\n爆弾を即時爆発させるとセムテックス爆弾Mk-IIスキルのクールダウンが減少し、一定時間の間、移動速度が増加します。"
             }
         },
 
