--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -197,7 +197,8 @@
         "쇼이치": "쇼이치",
         "실비아": "실비아",
         "엠마": "엠마",
-        "레녹스": "레녹스"
+        "레녹스": "레녹스",
+        "로지": "로지"
     },
     "weapons": {
         "투척": "투척", 
@@ -1053,6 +1054,28 @@
             "R": {
                 "name": "푸른뱀",
                 "Detail": "레녹스가 채찍을 X자 형태로 빠르게 두 번 휘둘러 각각 피해를 입히고 일정 시간 동안 푸른뱀 효과를 줍니다.\n 푸른뱀:일정시간 동안 고정 피해를 이동 거리에 비례하여 입힙니다. \n두 번 모두 적중한 대상에게 더 큰 고정피해를 이동 거리에 비례하여 입힙니다."
+            }
+        },
+        "로지": {
+            "T": {
+                "name": "더블샷 ",
+                "Detail": "로지는 스킬을 사용한 후 일정시간 이내에 기본 공격을 하면 빠르게 두 번 연속 발사하여 피해를 입힙니다.\n  초콜릿이 들어간 음식을 먹으면 체력 회복량의 일정량 만큼 스태미너를 회복하고, 초콜릿이 들어간 음료를 마시면 스태미너 회복량의 일정량만큼 체력을 회복합니다."
+            },
+            "Q": {
+                "name": "이지샷",
+                "Detail": "로지가 지정한 방향으로 총을 발사하여 경로상의 적들에게 피해를 입힙니다.\n 총에 맞은 대상이 있으면 일정시간 이내의 다음 이동 명령에 빠르게 돌진하며, 이지샷의 쿨다운이 감소합니다."
+            },
+            "W": {
+                "name": "스핀샷",
+                "Detail": "로지가 총을 난사하여 주변의 적들에게 피해를 입히고, 방어력을 감소시키며 모든 회복 효과를 중지시킵니다.\n 로지는 난사하는 동안 이동속도가 증가하고 탄환을 재장전합니다."
+            },
+            "E": {
+                "name": "에어샷",
+                "Detail": "로지가 지정한 대상을 점프하여 넘어가며 대상이 있던 위치에 총을 발사하여 피해를 입힙니다.로지는 점프하는 동안 모든 피해를 받지 않고, 목표로 지정할 수 없는 상태가 됩니다. \n로지가 지정한 대상을 점프하여 넘어가며 대상이 있던 위치에 총을 발사하여 피해를 입힙니다.로지는 점프하는 동안 모든 피해를 받지 않고, 목표로 지정할 수 없는 상태가 됩니다."
+            },
+            "R": {
+                "name": "셈텍스탄 Mk-II",
+                "Detail": "로지가 적이나 지면에 부착되고 잠시 후에 폭발하는 폭탄을 발사합니다. \n폭탄을 적에게 붙였다면 이동속도가 감소하고, 폭발할 때 피해를 입힙니다.\n부착된 폭탄이 터지기 전에 대상에게 기본 공격을 5회 적중하면 즉시 터지며 대상 최대 체력의 일정 비율만큼의 추가 피해를 입힙니다.\n 스킬을 적중하면 2회 공격으로 간주합니다.\n폭탄을 즉시 터트리면 셈텍스탄 Mk-II 스킬의 쿨다운이 감소하고, 이동속도가 증가합니다."
             }
         },
 
