아이기스 추가

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -615,7 +615,8 @@
         "벽력편": "Lightning Whip",
         "글레이프니르": "Gleipnir",
         "플라즈마윕": "Plasma Whip",
-        "혈화구절편": "Whip of 9 Bloody Tails"
+        "혈화구절편": "Whip of 9 Bloody Tails",
+        "아이기스": "Burnished Aegis"
     },
     "skill": {
         "아야": {
