--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -613,7 +613,8 @@
         "벽력편": "벽력편",
         "글레이프니르": "글레이프니르",
         "플라즈마윕": "플라즈마윕",
-        "혈화구절편": "혈화구절편"
+        "혈화구절편": "혈화구절편",
+        "아이기스": "아이기스"
     },
     "skill": {
         "아야": {
