--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -615,7 +615,8 @@
         "벽력편": "Chicote Elétrico",
         "글레이프니르": "Gleipnir",
         "플라즈마윕": "Chicote de Plasma ",
-        "혈화구절편": "Chicote das Nove Caudas Sangrentas"
+        "혈화구절편": "Chicote das Nove Caudas Sangrentas",
+        "아이기스": "Burnished Aegis"
     },
     "skill": {
         "아야": {
