--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -613,7 +613,8 @@
         "벽력편": "霹雳鞭",
         "글레이프니르": "格荚普尼尔",
         "플라즈마윕": "等离子鞭",
-        "혈화구절편": "血花九节鞭"
+        "혈화구절편": "血花九节鞭",
+        "아이기스": "宙斯盾"
 
     },
     "skill": {
