--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -613,7 +613,8 @@
         "벽력편": "霹靂鞭",
         "글레이프니르": "格莢普尼爾",
         "플라즈마윕": "等離子鞭",
-        "혈화구절편": "血花九節鞭"
+        "혈화구절편": "血花九節鞭",
+        "아이기스": "宙斯盾"
 
     },
     "skill": {
