--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -613,7 +613,8 @@
         "벽력편": "霹靂鞭",
         "글레이프니르": "グレープニル",
         "플라즈마윕": "プラズマ鞭",
-        "혈화구절편": "血花九節鞭"
+        "혈화구절편": "血花九節鞭",
+        "아이기스": "アイギス"
 
     },
     "skill": {
