신규 아이템 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -624,7 +624,9 @@
         "글레이프니르": "グレープニル",
         "플라즈마윕": "プラズマ鞭",
         "혈화구절편": "血花九節鞭",
-        "아이기스": "アイギス"
+        "아이기스": "アイギス",
+        "틴달로스의팔찌": "ティンダロスの腕輪",
+        "고장난시계": "壊れた腕時計"
 
     },
     "skill": {
