--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -626,7 +626,9 @@
         "글레이프니르": "Gleipnir",
         "플라즈마윕": "Chicote de Plasma ",
         "혈화구절편": "Chicote das Nove Caudas Sangrentas",
-        "아이기스": "Burnished Aegis"
+        "아이기스": "Burnished Aegis",
+        "틴달로스의팔찌": "Tindalos Band",
+        "고장난시계": "Broken Watch"
     },
     "skill": {
         "아야": {
