--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -624,7 +624,9 @@
         "글레이프니르": "格荚普尼尔",
         "플라즈마윕": "等离子鞭",
         "혈화구절편": "血花九节鞭",
-        "아이기스": "宙斯盾"
+        "아이기스": "宙斯盾",
+        "틴달로스의팔찌": "廷达罗斯手环",
+        "고장난시계": "破碎的手表"
 
     },
     "skill": {
