--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -624,7 +624,9 @@
         "글레이프니르": "格莢普尼爾",
         "플라즈마윕": "等離子鞭",
         "혈화구절편": "血花九節鞭",
-        "아이기스": "宙斯盾"
+        "아이기스": "宙斯盾",
+        "틴달로스의팔찌": "廷達羅斯手環",
+        "고장난시계": "破碎的手錶"
 
     },
     "skill": {
