--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -624,7 +624,9 @@
         "글레이프니르": "글레이프니르",
         "플라즈마윕": "플라즈마윕",
         "혈화구절편": "혈화구절편",
-        "아이기스": "아이기스"
+        "아이기스": "아이기스",
+        "틴달로스의팔찌": "틴달로스의팔찌",
+        "고장난시계": "고장난시계"
     },
     "skill": {
         "아야": {
