--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -209,7 +209,8 @@
         "엠마": "エマ",
         "레녹스": "リノックス",
         "로지": "ロッジ",
-        "루크": "ルク"
+        "루크": "ルク",
+        "캐시": "キャッシー"
     },
     "weapons": {
         "투척": "投げ", 
@@ -626,7 +627,9 @@
         "혈화구절편": "血花九節鞭",
         "아이기스": "アイギス",
         "틴달로스의팔찌": "ティンダロスの腕輪",
-        "고장난시계": "壊れた腕時計"
+        "고장난시계": "壊れた腕時計",
+        "캐리비안장식총": "カリビアン装飾銃",
+        "해적의증표": "海賊の証票"
 
     },
     "skill": {
@@ -1108,6 +1111,28 @@
             "R": {
                 "name": "アフターサービス",
                 "Detail": "ルクの掃除道具から貫通型銃弾が発射され、敵の失った体力に応じて 250/300/350(+攻撃力の80%)~500/600/700(+攻撃力の160%)のダメージを与え2秒間移動速度を50%減少させます。\n ルクは敵に対する視界を獲得して後ろへ突き飛ばされます。\n 進化効果: ルクが発射した貫通型銃弾が命中するとクリーニングサービスのクールダウンが初期化します。"
+            }
+        },
+        "캐시": {
+            "T": {
+                "name": "外科専門医",
+                "Detail": "外科専門医: キャッシーが敵にダメージを与えると3秒間攻撃力の20%の固定ダメージを与える外傷状態を付与します。\n基本攻撃からは1スタック、スキル攻撃からは2スタックを与え5スタックになると敵は6秒間最大体力の 1%(+攻撃力の20%)だけの固定ダメージを受ける致命的外傷状態になります。\nキャッシーは致命的外傷状態の敵に致命打を与えると10/25/40%だけ致命打ダメージが増加します。\nドパミン: 的にスキルダメージを与えると2秒間110/165/220(攻撃力の40%)のダメージを防ぐシールドを獲得し、移動速度が20/25/30%増加します。致命打ダメージを与えるとドパミンのクールダウンが1秒減少します。\nドパミン　クールダウン 20/18/16秒"
+            },
+            "Q": {
+                "name": "動脈切開術",
+                "Detail": "キャッシーが敵に突進し30/60/90/120/150(+攻撃力の70%)のダメージを与えます。\n 敵が基本攻撃の射程距離内にいるとすぐ攻撃し50%の追加ダメージを与え、ドパミンのクールダウンが1秒減少します。\n 致命打ダメージ増加量だけダメージ量が増加します。"
+            },
+            "W": {
+                "name": "切断",
+                "Detail": "キャッシーが前方へノコギリを振って70/105/140/175/210(+攻撃力の50のダメージを与え、2秒間移動速度を30%減少させます。\n 外郭から当たった敵は1秒間スキルを使用できない固定状態になります。"
+            },
+            "E": {
+                "name": "縫合",
+                "Detail": "キャッシーが糸を通した針を投げて30/40/50/60/70(+攻撃力の30)のダメージを与え0.5秒間束縛します。\n 敵に命中すると針が貫通し最大1人の敵を追加で攻撃できます。貫通した針で敵を当てると二人の敵を縫合し1秒間気絶させ、30/40/50/60/70(+攻撃力の 30%)の追加ダメージを与えます。\n 貫通した針が壁に衝突すると最初に当たった敵を壁際に突き飛ばし1.5秒間気絶させて30/40/50/60/70(+攻撃力の 30%)の追加ダメージを与えます。"
+            },
+            "R": {
+                "name": "緊急手術",
+                "Detail": "持続効果：キャッシーが瀕死状態の味方を復活すると味方の最大体力を2/3/4秒間毎秒5%ずつ回復させるエリアを生成します。\n 指定した方向へ突進しながら範囲内の敵が失った体力に応じて120/200/280(+攻撃力の 60%)のダメージを与え、即時致命的外傷を付与します。(致命的外傷状態の敵には持続時間を更新します)\n ダメージ量は対象の失った体力に応じて300/500/700(+攻撃力の 150%)まで増加します。(敵の現在の体力が最大体力の25％の時に最大になります。)\n範囲内の味方は200(+攻撃力の60%)だけの体力を回復します。\n味方の体力が40％未満の場合は300(+攻撃力の90%)だけ体力を回復します。"
             }
         },
 
