--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -208,7 +208,8 @@
         "엠마": "엠마",
         "레녹스": "레녹스",
         "로지": "로지",
-        "루크": "루크"
+        "루크": "루크",
+        "캐시": "캐시"
     },
     "weapons": {
         "투척": "투척", 
@@ -626,7 +627,9 @@
         "혈화구절편": "혈화구절편",
         "아이기스": "아이기스",
         "틴달로스의팔찌": "틴달로스의팔찌",
-        "고장난시계": "고장난시계"
+        "고장난시계": "고장난시계",
+        "캐리비안장식총": "캐리비안장식총",
+        "해적의증표": "해적의증표"
     },
     "skill": {
         "아야": {
@@ -1111,6 +1114,28 @@
             "R": {
                 "name": "애프터 서비스",
                 "Detail": "루크의 청소도구에서 관통형 총알을 발사하여, 적의 잃은 체력에 비례해 250/300/350(+공격력의 80%)~500/600/700(+공격력의 160%)의 피해를 입히고 2초 동안 이동속도를 50% 감소시킵니다.\n 루크는 적 대상의 시야를 얻고 뒤로 밀려납니다.\n 진화 효과: 루크가 발사한 관통형 총알이 적에게 명중하면 클리닝 서비스의 쿨다운이 초기화 됩니다."
+            }
+        },
+        "캐시": {
+            "T": {
+                "name": "외과 전문의",
+                "Detail": "캐시가 적에게 피해를 입히면 3초 동안 공격력의 20%의 고정 피해를 입히는 외상 상태가 됩니다.\n 기본 공격은 1개, 스킬 공격은 2개의 외상 스택을 부여하여 5스택이 쌓이면 6초 동안 최대 체력의 1%(+공격력의 20%)만큼 고정 피해를 입히는 치명적 외상 상태가 됩니다.\n 캐시는 치명적 외상 상태의 적에게 치명타를 입히면 10/25/40% 만큼 치명타 피해가 증가합니다.\n 포스트옵 : 적에게 스킬피해를 입히면 2초간 110/165/220(공격력의 40%)의 피해를 막아주는 보호막을 획득하고, 이동 속도가 20/25/30% 증가합니다.\n 치명타 피해를 입히면 포스트옵의 쿨다운이 1초 감소합니다."
+            },
+            "Q": {
+                "name": "동맥절제술",
+                "Detail": "캐시가 적에게 빠르게 돌진하여 30/60/90/120/150(+공격력의 70%)의 피해를 입힙니다.\n 적이 기본 공격 사거리 안에 있으면 제자리에서 즉시 공격하여 50%의 추가 피해를 입히고 포스트옵의 쿨다운이 1초 감소합니다.\n 치명타 피해 증가량만큼 피해량이 증가합니다.\n 캐시가 적을 치명적 외상 상태로 만들면 동맥절제술의 쿨다운이 80% 감소합니다."
+            },
+            "W": {
+                "name": "엠퓨테이션",
+                "Detail": "캐시가 전방으로 톱을 날카롭게 휘둘러 70/105/140/175/210(+공격력의 50%)의 피해를 입히고 이동속도를 2초 동안 30% 느려지게 합니다.\n 스킬의 바깥 범위에 적중한 적은 1초 동안 이동 스킬을 사용할 수 없는 고정 상태가 됩니다."
+            },
+            "E": {
+                "name": "수쳐",
+                "Detail": "캐시가 실이 묶인 바늘을 던져 30/40/50/60/70(+공격력의 30%)의 피해를 입히고 0.5초동안 속박시킵니다.\n 바늘이 적중하면 관통하여 최대 1명의 적에게 추가로 적중 할 수 있습니다.\n 관통한 바늘이 적에게 적중하면 적중한 대상들을 서로 끌어당겨 1초간 기절시키고, 30/40/50/60/70(+공격력의 30%)의 추가 피해를 입힙니다.\n 관통한 바늘이 벽에 충돌하면 처음 바늘에 적중한 적을 벽으로 밀어내 1.5초간 기절시키고, 30/40/50/60/70(+공격력의 30%)의 추가 피해를 입힙니다."
+            },
+            "R": {
+                "name": "이머전시 OP",
+                "Detail": "기본 지속 효과: 캐시는 빈사 상태의 아군을 회복시키면 2/3/4초간 아군의 최대 체력을 초당 5%씩 회복시키는 영역을 생성합니다.\n 캐시가 지정한 방향으로 톱을 휘두르며 빠르게 이동하여, 범위 내의 적들에게 120/200/280(+공격력의 60%)의 피해를 입히며 즉시 치명적 외상을 부여합니다.\n 피해량은 대상의 잃은 체력에 따라 300/500/700(+공격력의 150%)까지 증가할 수 있습니다.\n (적 현재 체력이 최대 체력의 25%일 때 최대가 됩니다.)\n 범위 내의 아군들은 체력이 200(+공격력의 60%) 만큼 회복됩니다. 아군의 체력이 40% 미만이면 300(+공격력의 90%) 만큼 회복됩니다."
             }
         },
 
